c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/extra_credit/union_type_declarations/member_name_conflicts.c
/* You can't declare two members of the same union with the same name */
union u {
    int a;
    int a;
};

int main(void) {
    return 0;
}